--- a/frontend/src/CSS/Discover.css
+++ b/frontend/src/CSS/Discover.css
@@ -209,34 +209,6 @@
     margin-top: 3.5vw;
     justify-content: space-evenly;
   }
-  .float {
-    position: fixed;
-    width: 5vw;
-    height: 5vw;
-    bottom: 3vw;
-    right: 3vw;
-    background-color: rgba(20, 255, 0);
-    font-size: 3vw;
-    color: #fff500;
-    border-radius: 5vw;
-    text-align: center;
-    padding: 0.5vw 0.5vw;
-    border: 0.15vw solid black;
-    box-shadow: 0.15vw 0.2vw 0.3vw #fff500;
-    -webkit-text-stroke-width: 0.125vw;
-    -webkit-text-stroke-color: #000000;
-  }
-  .float:hover {
-    background-color: rgb(16, 189, 0);
-  }
-  .float:active {
-    background-color: rgba(20, 255, 0);
-    box-shadow: 0.4vw 0.4vw 0.4vw rgba(0, 0, 0, 0);
-    transform: translateY(1vh);
-  }
-  .my-float {
-    margin-top: 1.25vw;
-  }
   #myModal {
     font-family: "Chakra Petch", sans-serif;
     font-weight: bold;
@@ -407,14 +379,10 @@
     font-size: 1vw;
     color: #ffffff;
     text-shadow: 0.1vw 0.15vw 0.1vw rgba(0, 0, 0, 0.5);
-    display: -webkit-box;
-    -webkit-line-clamp: 6;
-    line-clamp: 6;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    max-height: 7.5vw;
     overflow-y: auto;
-    max-height: 10vw;
+    overflow-x: hidden;
+    white-space: normal;
   }
 
   .filtersModal {
@@ -422,14 +390,10 @@
     color: #ffffff;
     text-shadow: 0.1vw 0.15vw 0.1vw rgba(0, 0, 0, 0.5);
     width: 20vw;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    line-clamp: 1;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    max-height: 1.62vw;
     overflow-y: auto;
-    padding: right 0.5vw;
+    overflow-x: hidden;
+    white-space: normal;
   }
 
   .filtersModal::-webkit-scrollbar {
@@ -655,34 +619,6 @@
     padding-top: 2vh;
     margin-top: 7.5vh;
     justify-content: space-evenly;
-  }
-  .float {
-    position: fixed;
-    width: 5vh;
-    height: 5vh;
-    bottom: 1vh;
-    right: 1vh;
-    background-color: rgba(20, 255, 0);
-    font-size: 7.5vw;
-    color: #fff500;
-    border-radius: 7.5vw;
-    text-align: center;
-    padding: 0.5vw 0.5vw;
-    border: 0.3vw solid black;
-    box-shadow: 0.4vw 0.2vh 0.3vw #fff500;
-    -webkit-text-stroke-width: 0.25vw;
-    -webkit-text-stroke-color: #000000;
-  }
-  .float:hover {
-    background-color: rgb(16, 189, 0);
-  }
-  .float:active {
-    background-color: rgba(20, 255, 0);
-    box-shadow: 0.4vw 0.4vw 0.4vw rgba(0, 0, 0, 0);
-    transform: translateY(0.5vh);
-  }
-  .my-float {
-    margin-top: 1.75vw;
   }
   #myModal {
     font-family: "Chakra Petch", sans-serif;
