--- a/frontend/src/CSS/Navbar.css
+++ b/frontend/src/CSS/Navbar.css
@@ -124,11 +124,11 @@
     color: #15ff00;
     text-shadow: 0.1vw 0.15vw 0.2vw #15ff0085;
   }
-  .yourLiked{
+  .postYourChalkLink{
     color: #fff70085;
     cursor: pointer;
   }
-  .yourLiked:hover{
+  .postYourChalkLink:hover{
     color: #fff500;
     text-shadow: 0.1vw 0.15vw 0.2vw #fff70085;
   }
@@ -223,11 +223,11 @@
   }
   .profileDrop {
     height: 12.5vh;
-    width: 38.5vw;
+    width: 45vw;
     background: #000000;
     margin-right: 1vw;
     margin-top: 3.7vh;
-    margin-left: 60vw;
+    margin-left: 55vw;
     position: fixed;
     z-index: 1;
     transform: translateY(1vh);
@@ -253,8 +253,8 @@
   }
   .closeProfile{
     color: rgb(255, 0, 0);
-    font-size: 2.5vw;
-    margin-left: 32.75vw;
+    font-size: 3vw;
+    margin-left: 37.75vw;
     cursor: pointer;
   }.closeProfile:hover{
     text-shadow: 0.05Vw 0.05vw 0.1vw rgb(255, 255, 255);
@@ -267,11 +267,11 @@
     color: #15ff00;
     text-shadow: 0.1vw 0.15vw 0.2vw #15ff0085;
   }
-  .yourLiked{
+  .postYourChalkLink{
     color: #fff70085;
     cursor: pointer;
   }
-  .yourLiked:hover{
+  .postYourChalkLink:hover{
     color: #fff500;
     text-shadow: 0.1vw 0.15vw 0.2vw #fff70085;
   }
