--- a/frontend/src/CSS/Forum.css
+++ b/frontend/src/CSS/Forum.css
@@ -246,7 +246,7 @@
     flex-direction: column;
   }
   .meSend{
-    background-color: #14ff00;
+    background-color: #15ff008a;
     color: #000;
     width: max-content;
     max-width: 70.5vw;
@@ -263,7 +263,7 @@
     white-space: pre-wrap;
   }
   .notMeSend{
-    background-color: #fff500;
+    background-color: #fff70089;
     color: #000;
     width:max-content;
     max-width: 70.5vw;
