--- a/frontend/src/CSS/Login.css
+++ b/frontend/src/CSS/Login.css
@@ -78,6 +78,15 @@
     margin-bottom: 1vw;
     outline: none;
   }
+  #passwordLogin {
+    width: 29vw;
+    padding-right: 3vw;
+  }
+  .showPassword {
+    cursor: pointer;
+    font-size: 1.5vw;
+    margin-left: -2.5vw;
+  }
   .remember {
     display: flex;
     flex-direction: row;
@@ -185,7 +194,7 @@
     cursor: pointer;
     margin-left: 0.2vw;
   }
-  .signUp:hover{
+  .signUp:hover {
     color: #0048a7;
   }
   .signUp:active {
@@ -277,6 +286,15 @@
     box-shadow: 0px 0.4vw 0.4vw rgba(0, 0, 0, 0.25);
     margin-bottom: 1vw;
     outline: none;
+  }
+  #passwordLogin {
+    width: 65vw;
+    padding-right: 5vw;
+  }
+  .showPassword {
+    cursor: pointer;
+    font-size: 1.5vh;
+    margin-left: -5vw;
   }
   .remember {
     display: flex;
@@ -382,7 +400,7 @@
     cursor: pointer;
     margin-left: 0.5vw;
   }
-  .signUp:hover{
+  .signUp:hover {
     color: #0048a7;
   }
   .signUp:active {
