--- a/frontend/src/CSS/Footer.css
+++ b/frontend/src/CSS/Footer.css
@@ -66,17 +66,30 @@ hr {
   font-size: 1.3vw;
   align-items: center;
 }
+.media {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
 #insta {
   width: 2vw;
-  cursor: pointer;
-} 
+  cursor: none;
+}
 #youtube {
   width: 2.5vw;
-  cursor: pointer;
+  cursor: none;
 }
 #twitter {
   width: 2.2vw;
-  cursor: pointer;
+  background-color: #fff;
+  border-radius: 0.25vw;
+  cursor: none;
+}
+#insta:hover,
+#youtube:hover,
+#twitter:hover {
+  transform: scale(1.25);
 }
 #contact {
   display: flex;
@@ -89,6 +102,10 @@ hr {
 .contact {
   display: flex;
   flex-direction: row;
+  cursor: none;
+}
+#contact:hover {
+  transform: scale(1.1);
 }
 .terms {
   display: flex;
@@ -101,17 +118,17 @@ hr {
   padding: 0 4.5vw;
   height: 8vw;
 }
-#terms,
-#privacy,
-#about {
-  cursor: pointer;
+#terms:hover,
+#privacy:hover,
+#about:hover {
+  transform: scale(1.1);
 }
 #ads {
   height: 8vw;
   width: 15.5vw;
   background-color: #fff;
   display: flex;
-  flex-direction: row; 
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   margin: 0 1.5vw;
