--- a/frontend/src/CSS/Forum.css
+++ b/frontend/src/CSS/Forum.css
@@ -42,6 +42,7 @@
     min-width: 79.9vw;
     max-height: 3.25vw;
     min-height: 3.25vw;
+    cursor: none;
   }
   #sendBtn {
     width: 8.4vw;
@@ -50,6 +51,7 @@
     border: 0;
     font-size: 2.5vw;
     border-radius: 0 1.25vw 1.25vw 0;
+    cursor: none;
   }
   #sendBtn:hover {
     background-color: #ffffff;
@@ -65,36 +67,36 @@
     background-color: #000000;
   }
   .chats {
-      margin: 0 2vw;
-      margin-right: 0.75vw;
-      height: 72.5vh;
-      border-radius: 1vw;
-      background-color: #1e1e1e;
-      display: flex;
-      flex-direction: column;
-      align-content: center;
-      overflow-y: scroll;
-      padding-right: 1vw;
-      margin-top: -0.65vh;
-      padding-top: 1vh;
+    margin: 0 2vw;
+    margin-right: 0.75vw;
+    height: 72.5vh;
+    border-radius: 1vw;
+    background-color: #1e1e1e;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    overflow-y: scroll;
+    padding-right: 1vw;
+    margin-top: -0.65vh;
+    padding-top: 1vh;
   }
   .chats::-webkit-scrollbar {
     width: 0.3vw;
   }
-  
+
   .chats::-webkit-scrollbar-track {
     background-color: #fff70028;
   }
-  
+
   .chats::-webkit-scrollbar-thumb {
     background-color: #15ff00;
     border-radius: 1vw;
   }
-  .me{
+  .me {
     display: flex;
     flex-direction: column;
   }
-  .notMe{
+  .notMe {
     display: flex;
     flex-direction: column;
   }
@@ -113,12 +115,12 @@
     word-wrap: break-word;
     overflow-wrap: break-word;
     white-space: pre-wrap;
-}
+  }
 
-  .notMeSend{
+  .notMeSend {
     background-color: #fff70089;
     color: #000;
-    width:max-content;
+    width: max-content;
     max-width: 70.5vw;
     padding: 0.25vw 1.25vw;
     font-size: 1.25vw;
@@ -131,14 +133,14 @@
     overflow-wrap: break-word;
     white-space: pre-wrap;
   }
-  .meDateTime{
+  .meDateTime {
     margin-left: auto;
     font-family: "Aldrich", sans-serif;
     font-size: 1vw;
     color: white;
     margin-bottom: 0.25vw;
   }
-  .notMeDateTime{
+  .notMeDateTime {
     margin-right: auto;
     font-size: 1vw;
     font-family: "Aldrich", sans-serif;
@@ -149,14 +151,18 @@
     width: 2vw;
     margin-right: 0.5vw;
   }
-  .notMeProfile{
+  .notMeProfile {
     display: flex;
     flex-direction: row;
     align-items: flex-end;
     font-size: 1.5vw;
     font-family: "Aldrich", sans-serif;
-    color: rgb(255, 0, 0);
+    color: rgb(255, 0, 0, 0.5);
     margin-bottom: 0.25vw;
+  }
+  a {
+    cursor: none;
+    color: rgb(0, 208, 255);
   }
 }
 @media only screen and (max-width: 550px) {
@@ -223,29 +229,29 @@
     background-color: #000000;
   }
   .chats {
-      margin: 0 2vw;
-      margin-right: 0.75vw;
-      height: 79vh;
-      border-radius: 1vw;
-      background-color: #1e1e1e;
-      display: flex;
-      flex-direction: column;
-      align-content: center;
-      overflow-y: scroll;
-      scrollbar-width: thin;
-      scrollbar-color: #15ff00 #fff70028;
-      padding-right: 1.5vw;
-      padding-left: 1vw;
+    margin: 0 2vw;
+    margin-right: 0.75vw;
+    height: 79vh;
+    border-radius: 1vw;
+    background-color: #1e1e1e;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    overflow-y: scroll;
+    scrollbar-width: thin;
+    scrollbar-color: #15ff00 #fff70028;
+    padding-right: 1.5vw;
+    padding-left: 1vw;
   }
-  .me{
+  .me {
     display: flex;
     flex-direction: column;
   }
-  .notMe{
+  .notMe {
     display: flex;
     flex-direction: column;
   }
-  .meSend{
+  .meSend {
     background-color: #15ff008a;
     color: #000;
     width: max-content;
@@ -262,10 +268,10 @@
     overflow-wrap: break-word;
     white-space: pre-wrap;
   }
-  .notMeSend{
+  .notMeSend {
     background-color: #fff70089;
     color: #000;
-    width:max-content;
+    width: max-content;
     max-width: 70.5vw;
     padding: 0.25vh 1.25vh;
     font-size: 4vw;
@@ -278,14 +284,14 @@
     overflow-wrap: break-word;
     white-space: pre-wrap;
   }
-  .meDateTime{
+  .meDateTime {
     margin-left: auto;
     font-family: "Aldrich", sans-serif;
     font-size: 2vw;
     color: white;
     margin-bottom: 0.25vw;
   }
-  .notMeDateTime{
+  .notMeDateTime {
     margin-right: auto;
     font-size: 2vw;
     font-family: "Aldrich", sans-serif;
@@ -296,7 +302,7 @@
     width: 4vw;
     margin-right: 0.75vw;
   }
-  .notMeProfile{
+  .notMeProfile {
     display: flex;
     flex-direction: row;
     align-items: flex-end;
