--- a/frontend/src/CSS/OTPVerificationPage.css
+++ b/frontend/src/CSS/OTPVerificationPage.css
@@ -24,12 +24,14 @@
   }
   .otpForm {
     margin-top: 1vw;
+    
   }
   .otpInputs {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     width: 40vw;
+    
   }
   .otpInput {
     font-size: 2vw;
@@ -40,6 +42,10 @@
     text-align: center;
     font-family: "Marvel", sans-serif;
     font-weight: bolder;
+    cursor: none;
+  }
+  .otpInput:hover{
+    transform: scale(1.1);
   }
   .verifyButton {
     background: #1877f2;
@@ -54,12 +60,12 @@
     color: #ffffff;
     text-shadow: 0px 0.4vw 0.4vw rgba(0, 0, 0, 0.25);
     text-align: center;
-    cursor: pointer;
     margin: 0 15vw;
     margin-top: 1.5vw;
   }
   .verifyButton:hover {
     background-color: #0048a7;
+    transform: scale(1.1);
   }
   .verifyButton:active {
     background-color: #1877f2;
