--- a/frontend/src/CSS/PostChalk.css
+++ b/frontend/src/CSS/PostChalk.css
@@ -9,15 +9,15 @@
   }
   .postBar {
     width: 75vw;
-    display: flex; 
+    display: flex;
     flex-direction: row;
     color: #ffffff;
     font-family: "Chakra Petch", sans-serif;
     font-weight: 500;
     text-shadow: 0.1vw 0.15vw 0.2vw rgba(255, 255, 255, 0.2);
-    height: 2.5vw;
+    height: 2.75vw;
     border-radius: 1.1vw;
-    padding: 0vw 1.3vw;
+    padding: 1.5vw 1.2vw;
     padding-bottom: 0.7vw;
     margin-left: 10vw;
     margin-right: 10vw;
@@ -26,6 +26,7 @@
     box-shadow: 0vw 0.2vw 0.2vw #fff500;
     border-radius: 0px 0px 1.2vw 1.2vw;
     position: fixed;
+    margin-top: -1vw;
   }
   .postYourChalk {
     color: #fff500;
@@ -48,7 +49,6 @@
     box-shadow: 0.15vw 0.2vw 0.2vw #14ff00;
     border-radius: 1.1vw;
     padding: 0.2vw 1.3vw;
-    cursor: pointer;
   }
   .contChalkVideo {
     color: #ffffff;
@@ -60,8 +60,11 @@
     height: 2vw;
     border-radius: 1.1vw;
     padding: 0.2vw 1.3vw;
-    cursor: pointer;
     margin-left: 0.5vw;
+  }
+  .contChalkImage:hover,
+  .contChalkVideo:hover {
+    transform: scale(1.1);
   }
   .lolala {
     display: flex;
