--- a/frontend/src/CSS/SignUp.css
+++ b/frontend/src/CSS/SignUp.css
@@ -91,6 +91,14 @@
     box-shadow: 0px 0.4vw 0.4vw rgba(0, 0, 0, 0.25);
     margin-bottom: 0.3vw;
     outline: none;
+    cursor: none;
+  }
+  #chalkNameSignUp:hover,
+  #nameSignUp:hover,
+  #emailSignUp:hover,
+  #passwordSignUp:hover,
+  #confirmPasswordSignUp:hover {
+    transform: scale(1.05);
   }
   .SignUpBtn {
     background: #1877f2;
@@ -105,13 +113,13 @@
     color: #ffffff;
     text-shadow: 0px 0.4vw 0.4vw rgba(0, 0, 0, 0.25);
     text-align: center;
-    cursor: pointer;
     margin-top: 1.5vw;
     margin-bottom: 1.5vw;
     margin-left: 13vw;
   }
   .SignUpBtn:hover {
     background-color: #0048a7;
+    transform: scale(1.1);
   }
   .SignUpBtn:active {
     background-color: #1877f2;
@@ -150,7 +158,7 @@
     margin-left: 0.2vw;
   }
   .login:hover {
-    color: #0048a7;
+    color: #a70000;
   }
   .login:active {
     text-shadow: 0.1vw 0.2vw 0.7vw rgba(0, 0, 0, 0.7);
