--- a/frontend/src/CSS/VideoPost.css
+++ b/frontend/src/CSS/VideoPost.css
@@ -59,6 +59,13 @@
     box-shadow: 0.3vw 0.4vw 0.4vw rgba(255, 255, 255, 0.25);
     margin-bottom: 0.7vw;
     outline: none;
+    cursor: none;
+  }
+  #videoTitle:hover,
+  #videoToolsUsed:hover,
+  #videoArtist:hover,
+  #videoLink:hover {
+    transform: scale(1.05);
   }
   .filters {
     color: white;
@@ -110,6 +117,10 @@
     margin-top: 0.75vw;
     margin-left: 17.5vw;
     outline: none;
+    cursor: none;
+  }
+  #videoDescription:hover {
+    transform: scale(1.05);
   }
   .post {
     background: #1877f2;
@@ -123,7 +134,6 @@
     color: #ffffff;
     text-shadow: 0px 0.4vw 0.4vw rgba(0, 0, 0, 0.25);
     text-align: center;
-    cursor: pointer;
     margin-bottom: 2vw;
     margin-left: 13vw;
     margin: 0 45vw;
